# DocApi

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  cmd_grpc_app.py  cmd_rest_app.py  docker-compose.yml  entrypoint.sh  pika_test.py  pyproject.toml  request_task  requirements.txt  rpc_request_task
docker/: Dockerfile  Dockerfile.prod  requirements.txt  wsgi.py
docs/: DELETE  SchemaItemHandler.py  candle.html  flow.excalidraw  flow.md  kafka.py  presentation.py  task.md  test_presentation.py  ticket.py  utils.py
init/: requirements.txt  wsgi.py
kafka/: README.md
mail/: Mail.py
rest/: exception_handler.py  hello.py  server.py  status_code.py  task.py
rest/route/: download_file.py  image.py  person.py
rpc/: server.py
rpc/proto/: .ticket.proto.swp  hello_world.proto  task.proto
services/: .env  Dockerfile  entrypoint.sh  pytest.ini  requirements.txt  wsgi.py
services/kafka/: README.md
services/tests/: pytest.ini  test_infraestructure.py  test_presentation.py  test_task.py
src/application/: ApplicationError.py  AuditHandler.py  BrokerProtocol.py  BrokerTopic.py  Criteria.py  RepositoryProtocol.py  UseCaseProtocol.py  application_error.py  audit_handler.py  criteria.py  infrastructure_error.py  ticket.py
src/domain/: DomainError.py  DomainProtocol.py  IdentifierHandler.py  IdentityHandler.py  RepositoryProtocol.py  SchemaHandler.py  base_domain.py  custom_dict.py  custom_enum.py  custom_string.py  domain_error.py  domain_protocol.py  funcs.py  identifier_handler.py  str_funcs.py
src/infraestructure/: InfraestructureError.py  UserValidator.py  config.py  logger.py  server.py
src/infrastructure/: InfrastructureError.py  config.py  logger.py  mylogger.py
src/presentation/: BrokerProtocol.py  ControllerProtocol.py  DTOProtocol.py  ExceptionHandler.py  IdentifierHandler.py  PresentationError.py  (+1 more)
sticker/: .env  requeriments.txt
task/: Makefile  requirements.txt
tests/: presentation.py  test_infraestructure.py  test_integration.py
(+262 files in other folders)
