[tool.poetry]
name = "src"
version = "1.0.0.0"
description = "Task manager"
authors = ["Patrick <patrick18483@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
flask = "^3.0.0"
validator-collection = "^1.5.0"
mypy = "^1.7.0"
pydantic = "^2.5.1"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
gunicorn = "^21.2.0"
flask-cors = "^4.0.0"
kafka-python = "^2.0.2"
prometheus-client = "^0.18.0"
pymongo = "^4.6.0"
python-magic = "^0.4.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
