[tool.poetry]
name = "src"
version = "1.0.0.0"
description = "Task manager"
authors = ["Patrick <patrick18483@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
flask = "^3.0.0"
validator-collection = "^1.5.0"
mypy = "^1.7.0"
pydantic = "^2.5.1"
gunicorn = "^21.2.0"
flask-cors = "^4.0.0"
prometheus-client = "^0.18.0"
pymongo = "^4.6.0"
python-magic = "^0.4.27"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
autoflake = "^2.2.1"
black = "^23.12.1"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
